name:                blaze-css
version:             0.1.0.0
synopsis:            Style 'attributes' for use with blaze-markup (css-* branches)
license:             BSD3
license-file:        LICENSE
author:              Michael Hatfield
maintainer:          github@michael-hatfield.com
category:            Text
build-type:          Simple
cabal-version:       >=1.10
description:
    Rendering CSS styles.

library
    hs-source-dirs:      src
    exposed-modules:
        Text.Blaze.Css21.Value
        Text.Blaze.Css21.Style

    ghc-options:         

    other-extensions:    OverloadedStrings

    build-depends:
          base >=4.7 && <5
        , blaze-markup >=0.7.0.3
        , text >=0.10
        , bytestring >= 0.10

    default-language:    Haskell2010
  
